--- a/nacos-config/src/main/resources/bootstrap.yml
+++ b/nacos-config/src/main/resources/bootstrap.yml
@@ -1,7 +1,8 @@
 spring:
+  application:
+    name: nacos-config
   cloud:
     nacos:
       config:
-        file-extension: yaml
+        file-extension: yml
         server-addr: 127.0.0.1:8848
-        namespace: 44af10e2-c5c9-41e2-96c7-4563a226ebe0
