--- a/nacos-config/pom.xml
+++ b/nacos-config/pom.xml
@@ -25,9 +25,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
