--- a/nacos-provider/pom.xml
+++ b/nacos-provider/pom.xml
@@ -33,6 +33,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
 
 
     </dependencies>
