--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,7 @@
                             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
                             <version>${springcloud.nacos.version}</version>
                         </dependency>-->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-                <version>${springcloud.version}</version>
-            </dependency>
+            <!--alibaba-nacos-discovery 添加了ribbon依赖，所以不要添加。只是需要添加feign依赖-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
