--- a/nacos-consume-seata/pom.xml
+++ b/nacos-consume-seata/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com</groupId>
-    <artifactId>comsume-seata</artifactId>
+    <artifactId>nacos-consume-seata</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>comsume-seata</name>
+    <name>nacos-consume-seata</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
