--- a/nacos-provide-stock/pom.xml
+++ b/nacos-provide-stock/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com</groupId>
-    <artifactId>nacos-stock</artifactId>
+    <artifactId>nacos-provide-stock</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>nacos-stock</name>
+    <name>nacos-provide-stock</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
