--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>nacos-config</module>
         <module>nacos-provide-order</module>
         <module>nacos-provide-stock</module>
+        <module>nacos-consume-seata</module>
     </modules>
 
     <parent>
