--- a/nacos-consume-seata/src/main/resources/application.yml
+++ b/nacos-consume-seata/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     nacos:
       discovery:
         server-addr: 34.81.32.251:8848
-        namespace: 96c38075-ceee-4a22-b69d-d0d14b8a2449
+        namespace: 68468122-8955-45ee-a5b7-3d87972325b1
   datasource:
     url: jdbc:mysql://34.81.32.251:3306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
@@ -19,7 +19,7 @@ seata:
     nacos:
       server-addr: 34.81.32.251:8848
       group: DEFAULT_GROUP
-      namespace: 96c38075-ceee-4a22-b69d-d0d14b8a2449
+      namespace: 68468122-8955-45ee-a5b7-3d87972325b1
       username: nacos
       password: nacos
   registry:
@@ -28,7 +28,7 @@ seata:
       application: seata-server
       server-addr: 34.81.32.251:8848
       group: DEFAULT_GROUP
-      namespace: 96c38075-ceee-4a22-b69d-d0d14b8a2449
+      namespace: 68468122-8955-45ee-a5b7-3d87972325b1
       username: nacos
       password: nacos
   # 配置服务分组
@@ -36,3 +36,7 @@ seata:
   service:
     vgroupMapping:
       default_tx_group: default
+nacos:
+  config:
+    server-addr: 34.81.32.251:8848
+    namespace: 68468122-8955-45ee-a5b7-3d87972325b1
