--- a/nacos-provide-stock/pom.xml
+++ b/nacos-provide-stock/pom.xml
@@ -63,6 +63,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>0.2.2.RELEASE</version>
         </dependency>
     </dependencies>
 
