--- a/nacos-consume-seata/pom.xml
+++ b/nacos-consume-seata/pom.xml
@@ -95,6 +95,10 @@
             <groupId>com.alibaba.boot</groupId>
             <artifactId>nacos-config-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+        </dependency>
 
     </dependencies>
 
