--- a/pom.xml
+++ b/pom.xml
@@ -29,17 +29,28 @@
     <properties>
         <java.version>1.8</java.version>
         <springcloud.version>2.0.4.RELEASE</springcloud.version>
-        <springcloud.nacos.version>0.9.0.RELEASE</springcloud.nacos.version>
+        <springcloud.nacos.version>0.2.2.RELEASE</springcloud.nacos.version>
         <nacos.config.version>0.2.7</nacos.config.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+           <!-- <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                <version>${springcloud.nacos.version}</version>
+            </dependency>-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                 <version>${springcloud.nacos.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>1.2.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba.boot</groupId>
                 <artifactId>nacos-config-spring-boot-starter</artifactId>
