--- a/nacos-provide-order/pom.xml
+++ b/nacos-provide-order/pom.xml
@@ -76,6 +76,7 @@
     </dependencies>
 
     <build>
+        <finalName>nacos-provide-order</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
