--- a/nacos-provide-stock/pom.xml
+++ b/nacos-provide-stock/pom.xml
@@ -8,6 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>nacos-provide-stock</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>war</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -67,6 +68,7 @@
     </dependencies>
 
     <build>
+        <finalName>nacos-provide-stock</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
