--- a/nacos-consume-seata/src/main/resources/application.yml
+++ b/nacos-consume-seata/src/main/resources/application.yml
@@ -6,8 +6,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 34.81.32.251:8848
+        server-addr: 192.168.31.115:8848
         namespace: 68468122-8955-45ee-a5b7-3d87972325b1
+
   datasource:
     url: jdbc:mysql://34.81.32.251:3306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
@@ -17,8 +18,8 @@ seata:
   config:
     type: nacos
     nacos:
-      server-addr: 34.81.32.251:8848
-      group: DEFAULT_GROUP
+      server-addr: 192.168.31.115:8848
+      group: SEATA_GROUP
       namespace: 68468122-8955-45ee-a5b7-3d87972325b1
       username: nacos
       password: nacos
@@ -26,8 +27,8 @@ seata:
     type: nacos
     nacos:
       application: seata-server
-      server-addr: 34.81.32.251:8848
-      group: DEFAULT_GROUP
+      server-addr: 192.168.31.115:8848
+      group: SEATA_GROUP
       namespace: 68468122-8955-45ee-a5b7-3d87972325b1
       username: nacos
       password: nacos
@@ -38,5 +39,5 @@ seata:
       default_tx_group: default
 nacos:
   config:
-    server-addr: 34.81.32.251:8848
+    server-addr: 192.168.31.115:8848
     namespace: 68468122-8955-45ee-a5b7-3d87972325b1
