--- a/nacos-consume-seata/src/main/resources/application.yml
+++ b/nacos-consume-seata/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.31.115:8848
+        server-addr: 127.0.0.1:8848
         namespace: 68468122-8955-45ee-a5b7-3d87972325b1
 
   datasource:
@@ -18,7 +18,7 @@ seata:
   config:
     type: nacos
     nacos:
-      server-addr: 192.168.31.115:8848
+      server-addr: 127.0.0.1:8848
       group: SEATA_GROUP
       namespace: 68468122-8955-45ee-a5b7-3d87972325b1
       username: nacos
@@ -27,7 +27,7 @@ seata:
     type: nacos
     nacos:
       application: seata-server
-      server-addr: 192.168.31.115:8848
+      server-addr: 127.0.0.1:8848
       group: SEATA_GROUP
       namespace: 68468122-8955-45ee-a5b7-3d87972325b1
       username: nacos
@@ -39,5 +39,11 @@ seata:
       default_tx_group: default
 nacos:
   config:
-    server-addr: 192.168.31.115:8848
+    server-addr: 127.0.0.1:8848
     namespace: 68468122-8955-45ee-a5b7-3d87972325b1
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 160000000
+        readTimeout: 160000000
