--- a/nacos-provide-stock/src/main/resources/application.yml
+++ b/nacos-provide-stock/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.31.115:8848
+        server-addr: 127.0.0.1:8848
         namespace: 68468122-8955-45ee-a5b7-3d87972325b1
   datasource:
     url: jdbc:mysql://34.81.32.251:3306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
@@ -13,3 +13,30 @@ spring:
     name: nacos-provide-stock
 server:
   port: 8041
+seata:
+  config:
+    type: nacos
+    nacos:
+      server-addr: 127.0.0.1:8848
+      group: SEATA_GROUP
+      namespace: 68468122-8955-45ee-a5b7-3d87972325b1
+      username: nacos
+      password: nacos
+  registry:
+    type: nacos
+    nacos:
+      application: seata-server
+      server-addr: 127.0.0.1:8848
+      group: SEATA_GROUP
+      namespace: 68468122-8955-45ee-a5b7-3d87972325b1
+      username: nacos
+      password: nacos
+  # 配置服务分组
+  tx-service-group: default_tx_group
+  service:
+    vgroupMapping:
+      default_tx_group: default
+nacos:
+  config:
+    server-addr: 127.0.0.1:8848
+    namespace: 68468122-8955-45ee-a5b7-3d87972325b1
