--- a/nacos-consume-seata/pom.xml
+++ b/nacos-consume-seata/pom.xml
@@ -41,11 +41,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
             <version>${spring-cloud-alibaba.version}</version>
-        </dependency>-->
+        </dependency>
 
         <!-- seata-spring-boot-starter -->
         <!--<dependency>
@@ -101,6 +101,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+            <version>2.0.4.RELEASE</version>
+            <type>pom</type>
+            <scope>import</scope>
         </dependency>
 
     </dependencies>
