通用mapper 改成 mybatis-plus

--- a/nacos-provide-second/pom.xml
+++ b/nacos-provide-second/pom.xml
@@ -28,10 +28,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
