--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <springcloud.version>2.2.7.RELEASE</springcloud.version>
+        <springcloud.version>Hoxton.SR12</springcloud.version>
         <springcloud.nacos.version>0.2.2.RELEASE</springcloud.nacos.version>
         <spring-cloud-alibaba.version>2.2.7.RELEASE</spring-cloud-alibaba.version>
         <nacos.config.version>0.2.7</nacos.config.version>
@@ -129,6 +129,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
+            <!--<dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.SR12</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>-->
+
 
             <dependency>
                 <groupId>mysql</groupId>
@@ -154,7 +163,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>${springcloud.version}</version>
+                <version>2.2.7.RELEASE</version>
             </dependency>
             <!--mybatis-->
             <dependency>
