--- a/nacos-consume-seata/src/main/resources/application.yml
+++ b/nacos-consume-seata/src/main/resources/application.yml
@@ -8,7 +8,6 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         namespace: 68468122-8955-45ee-a5b7-3d87972325b1
-
   datasource:
     url: jdbc:mysql://34.81.32.251:3306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
@@ -37,6 +36,7 @@ seata:
   service:
     vgroupMapping:
       default_tx_group: default
+  enable-auto-data-source-proxy: false
 nacos:
   config:
     server-addr: 127.0.0.1:8848
