--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <springcloud.version>Hoxton.SR12</springcloud.version>
-        <springcloud.nacos.version>0.2.2.RELEASE</springcloud.nacos.version>
-        <spring-cloud-alibaba.version>2.2.7.RELEASE</spring-cloud-alibaba.version>
-        <nacos.config.version>0.2.7</nacos.config.version>
-        <springboot.version>2.2.12.RELEASE</springboot.version>
+        <springcloud.version>Greenwich.SR3</springcloud.version>
+        <spring-cloud-alibaba.version>2.1.1.RELEASE</spring-cloud-alibaba.version>
+        <springboot.version>2.1.1.RELEASE</springboot.version>
         <mybatis-plus-boot-starter.version>3.3.0</mybatis-plus-boot-starter.version>
     </properties>
 
@@ -80,9 +78,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-
-
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
@@ -107,7 +102,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>2.2.7.RELEASE</version>
+                <version>2.1.1.RELEASE</version>
             </dependency>
             <!--mybatis-->
             <dependency>
@@ -118,7 +113,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-                <version>2.2.7.RELEASE</version>
+                <version>2.1.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
