--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
                 <version>1.4.2</version>
             </dependency>
             <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-all</artifactId>
+                <version>1.4.2</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>2.1.1.RELEASE</version>
