--- a/nacos-provider/pom.xml
+++ b/nacos-provider/pom.xml
@@ -16,6 +16,10 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
     </dependencies>
 
