--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>nacos-provide-order</module>
         <module>nacos-provide-stock</module>
         <module>nacos-consume-seata</module>
+        <module>springcloud-gateway</module>
     </modules>
 
     <properties>
@@ -29,10 +30,7 @@
 
     <!--dependencies 引入的依赖，子模块都会继承，这里添加每个模块都需要的依赖-->
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -77,6 +75,11 @@
                 <version>${springcloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${springboot.version}</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
@@ -124,6 +127,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>30.1.1-jre</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-gateway</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
