--- a/nacos-provider/src/main/resources/application.yml
+++ b/nacos-provider/src/main/resources/application.yml
@@ -6,5 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 127.0.0.1:8849
+        username: nacos
+        password: nacos
 
