--- a/nacos-provide-stock/pom.xml
+++ b/nacos-provide-stock/pom.xml
@@ -38,6 +38,10 @@
             <groupId>io.seata</groupId>
             <artifactId>seata-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
