seata 实现 tcc 模式

--- a/nacos-provide-order/src/main/resources/application.yml
+++ b/nacos-provide-order/src/main/resources/application.yml
@@ -38,6 +38,7 @@ seata:
       username: ${NACOS_USERNAME}
       password: ${NACOS_PASSWORD}
   enable-auto-data-source-proxy: false
+  data-source-proxy-mode: NONE
 nacos:
   config:
     server-addr: ${NACOS_HOST}:${NACOS_PORT}
