--- a/springcloud-gateway/pom.xml
+++ b/springcloud-gateway/pom.xml
@@ -14,6 +14,11 @@
 	<description>Demo project for Spring Boot</description>
 	<dependencies>
 		<dependency>
+			<groupId>com</groupId>
+			<artifactId>common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
