add common 自动导入maven项目

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>nacos-provide-stock</module>
         <module>nacos-consume-seata</module>
         <module>springcloud-gateway</module>
+        <module>common</module>
     </modules>
 
     <properties>
