添加多个公共文件

--- a/nacos-config/src/main/resources/bootstrap.yml
+++ b/nacos-config/src/main/resources/bootstrap.yml
@@ -12,4 +12,6 @@ spring:
         # 指定配置文件，如果不指定，默认读取 项目名-配置环境.后缀
         # 写了指定文件只读指定配置文件，不然就读默认配置文件。
         name: nacos-test
+        shared-configs:
+          - common-application.yml
 
