--- a/nacos-consume/pom.xml
+++ b/nacos-consume/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
