--- a/springcloud-gateway/src/main/resources/application.yml
+++ b/springcloud-gateway/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8898
+        server-addr: ${NACOS_HOST}:${NACOS_PORT}
+        namespace: ${NACOS_NAMESPACE}
     gateway:
       routes:
         - id: "provide"
